--- a/android-app-java/app/src/main/res/layout/activity_main.xml
+++ b/android-app-java/app/src/main/res/layout/activity_main.xml
@@ -14,5 +14,10 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+    
+    <ImageView
+         android:layout_width="" 
+         android:layout_height=""
+         android:src="@"  />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
