--- a/android-app-java/app/src/main/res/layout/activity_main.xml
+++ b/android-app-java/app/src/main/res/layout/activity_main.xml
@@ -6,18 +6,19 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+  
     
+    <Button
+        android:id="@+id/simpleButton"  
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"   
+        android:text="button"   
+       />
+  
     <ImageView
          android:layout_width="" 
          android:layout_height=""
-         android:src="@"  />
+         android:src="@"
+         app:layout_constraintTop_toTopOf="@+id/simpleButton"     />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
