--- a/android-app-java/app/src/main/res/values/styles.xml
+++ b/android-app-java/app/src/main/res/values/styles.xml
@@ -1,11 +1,11 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.MaterialComponents.Light">
+    <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">@color/colorDarkLeaf</item>
+        <item name="colorPrimaryDark">@color/colorLeaf</item>
+        <item name="colorAccent">@color/colorLeaf</item>
     </style>
 
 </resources>
