Added imageView click listener

--- a/android-app-java/app/src/main/res/layout/activity_main.xml
+++ b/android-app-java/app/src/main/res/layout/activity_main.xml
@@ -19,14 +19,14 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/buttonUpload"
+        android:id="@+id/buttonAnalyze"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:elevation="16dp"
-        android:text="Upload Image"
+        android:text="ANALYZE"
         android:textAllCaps="true"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textStyle="bold"
