--- a/android-app-java/app/src/main/res/layout/activity_main.xml
+++ b/android-app-java/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/buttonUpload"
+        android:id="@+id/buttonAnalyze"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
