--- a/android-app-java/app/src/main/res/layout/activity_main.xml
+++ b/android-app-java/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:src="@drawable/ic_leaf"
-        app:layout_constraintBottom_toTopOf="@id/buttonUpload"
+        app:layout_constraintBottom_toTopOf="@id/buttonAnalyze"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
