--- a/android-app-java/app/src/main/res/layout/result_toolbar.xml
+++ b/android-app-java/app/src/main/res/layout/result_toolbar.xml
@@ -2,19 +2,19 @@
 <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="?attr/actionBarSize"
     android:background="@color/colorPrimary"
     android:theme="@style/AppTheme"
     app:contentInsetLeft="0dp"
-
     app:contentInsetStart="0dp">
 
     <TextView
         android:id="@+id/textViewTitle"
+
         style="@style/TextAppearance.AppCompat.Large"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center_horizontal"
+        android:gravity="center"
         android:text="CATEGORY"
         android:textAlignment="center"
         android:textColor="@android:color/white"
