added ripple effect to button

--- a/android-app-java/app/src/main/res/layout/fragment_on_boarding_one.xml
+++ b/android-app-java/app/src/main/res/layout/fragment_on_boarding_one.xml
@@ -13,6 +13,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
+        android:clickable="true"
+        android:foreground="?attr/selectableItemBackground"
         android:text="NEXT"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="@android:color/black"
