--- a/android-app-java/app/src/main/res/layout/fragment_on_boarding_second.xml
+++ b/android-app-java/app/src/main/res/layout/fragment_on_boarding_second.xml
@@ -13,6 +13,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
+        android:foreground="?attr/selectableItemBackground"
+        android:clickable="true"
         android:text="BACK"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="@android:color/black"
@@ -29,6 +31,8 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:text="NEXT"
+        android:foreground="?attr/selectableItemBackground"
+        android:clickable="true"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="@android:color/black"
         android:textStyle="bold"
